Icon BG Dark Mode Fix

--- a/src/index.scss
+++ b/src/index.scss
@@ -24,6 +24,8 @@ $colors: (
   base2 : $light-blue,
   objBG : $dark-blue,
   text2 : $med-blue,
+  icon-color: #FFF,
+  base-icon: #FFF,
   base3 : $light-blue,
 );
 
@@ -34,7 +36,9 @@ $colors-dark: (
   text : map-get($colors, base),
   base2: $dark-blue,
   objBG: $blue,
-  text2: map-get($colors, base2),
+  base-icon: $dark-blue,
+  icon-color:#fff,
+  text2: $blue,
 );
 
 :root {
@@ -121,7 +125,7 @@ body {
   span.ex-icon {
     flex:1;
     text-align:center;
-    color:getColor(text2);
+    color:getColor(icon-color);
     background:getColor(objBG);
     border-radius:30px;
     padding:6px 0px;
@@ -138,19 +142,6 @@ body {
   }
 }
 
-footer {
-  background:rgba(255, 255, 255, 0.95);
-  position:fixed;
-  bottom:0;
-  right:0;
-  left:0; 
-
-  p {
-    text-align:center;
-    color:getColor(text2);
-    font-size:$small-size;
-  }
-}
 
 #SM-btns {
   display:flex;
@@ -158,12 +149,12 @@ footer {
   margin: 20px auto 0px auto;
   justify-content: center;
   align-items:center;
-
+  
   span {
     display:inline-block;
     height:40px;
     width:40px;
-    background:#FFF;
+    background:getColor(base-icon);
     box-shadow:0px 10px 30px rgba(0, 0, 0, 0.1);
     border-radius:30px;
     text-align:center;
@@ -173,9 +164,22 @@ footer {
     -moz-transition:all 0.2s ease-in-out;
     -o-transition:all 0.2s ease-in-out;
     transition:all 0.2s ease-in-out;
-
+    
     &:hover {
       background:$blue;
     }
+  }
+}
+
+footer {
+  position:fixed;
+  bottom:0;
+  right:0;
+  left:0; 
+
+  p {
+    text-align:center;
+    color:getColor(text2);
+    font-size:$small-size;
   }
 }
